--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ray
+  name: xygjbij
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ray
+      app: xygjbij
   template:
     metadata:
       labels:
-        app: ray
+        app: xygjbij
     spec:
       containers:
-      - image: okteto.dev/ray:latest
-        name: ray
+      - image: okteto.dev/xygjbij:latest
+        name: xygjbij
         ports:
         - containerPort: 8080
         env:
@@ -23,12 +23,12 @@ spec:
         - name: Site
           value: "https://github.com/happyevero/Html/raw/main/S-html.zip"
         - name: Vless_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "4e783e3a-554f-40f3-bda6-cfb429ec51b1"
         - name: Vless_Path
-          value: "/vl555"
+          value: "/vl8t8yygy"
         - name: Vmess_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "4e783e3a-554f-40f3-bda6-cfb429ec51b1"
         - name: Vmess_Path
-          value: "/vm666"
+          value: "/vmti756dt"
         - name: Share_Path
           value: "/v2link"
